- Nazgul powers are ported (except Black-Breath).

28/12/2001 (Jir)
# MORE Unstable, bug-filled, far-from-fully-implemented version!!
# Bugfixes and implementations URGENTLY needed. (almost not tested at all)
  - PernAngband monster system is ported.
  - replaced 550 mangband monsters with 1042 PernA monsters.
  - Generation flags are not used for now(eg. Shark in dungeon, pfft)
  - Most of new flags are not implemented yet.
- Black-Breath is implemented.
- Specific ESP (eg. slay-orc weapon gives orc-only ESP)
- Fixed a bug that allowed to generate breeders on the wilderness.
- Some mangband-origined ego-items are back again.
- Fixed a bug where some ego-items could never be generated.

29/12/2001 (Jir)
- Black-Breath works slower/is contagious now.
- Fixed a bug that caused breeders not to breed.
- Randarts/egos can have specific-esp.
- Some fun features for pints of ale :)
- DSM activation fixed.
- Added some flags on player_type.
- Fixed a bug that caused Smeagol to drop Grond/Crown (mdr.. thx Mihi!)
- monster_death ported.

30/12/2001 (Jir)
- new RBM/RBEs implemented.
- fixed a bug that allowed ego-torches to burn forever.
- some special attacking effect (like Chaos/Vorpal/Vampiric) implemented.
  (but they don't work in pvp yet!)
- Items with high bonus get *higher* prices.
- Config options (cfg_blabla) are bundled in one structure (cfg.blabla).
- New config option SPELL_STACK_LIMIT.
- Wraith-Form is harder to stack(just like Haste-Self).
- Reflection. Some traps.

31/12/2001 (Jir)
- Boomerang/Axe/MageStaff randarts.
- New monster spells are implemented(flags4-6).
- (Slightly) easy-to-read unique list.

1/1/2001 (Jir)
- A happy new year.
- Merged the changes/files necessary to compile in win32(by Yakina).
- LUA error messages are displayed only to DM/wizard.
- bandled CAUSE_1~4 into CURSE, ARROW_1~4 into ARROW_1~2.
- Insanity/Eldritch-horror(partially) implemented.
- Original monsters/mego/items/egos/artifacts.
- Drain life/mana